--- a/1주차/강의소개.md
+++ b/1주차/강의소개.md
@@ -33,6 +33,6 @@
     - 줄여서 자원관리자.
     - 자원은 컴퓨터 시스템의 CPU, 메모리, 입출력장치 등.
     - 프로세서, 기억장치, 입출력 장치 등의 효율적 관리.
-- CPU룰 실행중인 프로그램들에게 짧은 시간씩 번갈아 할당하거나 메모리 공간을 실행중인 프로그램에 따라 어느 정도 분배할지 결정하는 등의 역할을 해서 프로그램이 효율적으로 돌아가도록 만들어준다.
+- CPU를 실행중인 프로그램들에게 짧은 시간씩 번갈아 할당하거나 메모리 공간을 실행중인 프로그램에 따라 어느 정도 분배할지 결정하는 등의 역할을 해서 프로그램이 효율적으로 돌아가도록 만들어준다.
 - 그렇다고 특정 프로그램이 너무 안돌아가고 하는것도 방지.
 ![목표2](./강의소개/목표2.png)
